<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/favorite_page"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/favorite_page"
        app:showAsAction="always" />

    <item
        android:id="@+id/setting_page"
        android:title="@string/setting"
        app:showAsAction="never"/>
</menu>